# estate-chat-V2

./: .dockerignore  .gitignore  README.md  pyproject.toml  test.py
.devcontainer/: devcontainer copy.json  devcontainer.json  docker-compose.yml
backend/: RAG.py
backend/app/: main.py
backend/app/models/: __init__.py  chat.py  documents.py  graph.py
backend/data/chroma_db/: chroma.sqlite3
backend/data/eval/: ground_truth_chunk_questions.jsonl
backend/data/extracted/: certificate_016.json  donation_money_006.json  donation_money_007.json  donation_money_008.json  donation_money_009.json  donation_property_005.json  mortgage_014.json  poa_010.json  poa_011.json  purchase_001.json  purchase_002.json  purchase_003.json  purchase_017.json  sale_004.json  sale_015.json  will_012.json  will_013.json
backend/data/preprocessing/: run_embeddings.py  run_ocr.py  run_property_graph.py
docker/: api.Dockerfile  ui.Dockerfile
notebooks/: check_rag_output.ipynb  evaluation.ipynb  evaluation_retrieval.ipynb  generate_ground_truth.ipynb  vector_search.ipynb
streamlit_app/: app.py
streamlit_app/pages/: 1_main.py  2_documents.py  3_people.py
